# PacketSentry

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  Dockerfile  PacketSentry_Complete_Context.md  README.md  attack.pcap  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml  ruff.toml
.github/workflows/: ci.yml
docs/: OUTPUTS.md
models/: isolation_forest.pkl  preprocessor.pkl  scaler.pkl  xgb_metadata.json  xgb_nslkdd.json  zscore.pkl
packetsentry/: __init__.py  __main__.py  cli.py
packetsentry-web/: docker-compose.yml
packetsentry-web/backend/: Dockerfile  audit.py  auth.py  dependencies.py  main.py  nixpacks.toml  requirements.txt  ws_manager.py
packetsentry-web/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
packetsentry/alerts/: __init__.py  engine.py  severity.py  store.py
packetsentry/capture/: __init__.py  live.py  pipeline.py  replay.py
packetsentry/detection/: __init__.py  aho_corasick.py  ensemble.py  explainer.py  gnn_detector.py  (+6 more)
scripts/: evaluate_all.py  generate_attacks.sh  generate_demo_pcap.py  train_cicids2017.py  train_rf.py  train_xgboost.py
signatures/: rules.yaml
tests/: test_aho_corasick.py  test_alert_engine.py  test_alert_store.py  test_api_routers.py  test_dissector.py  test_ensemble.py  test_evaluate_all.py  test_extractor.py  test_flow_tracker.py  test_gnn_detector.py  test_integration.py  test_isolation_zscore.py  test_pipeline.py  test_preprocessor.py  test_severity.py  test_storage.py  test_transformer_ae.py  test_tui.py  test_xgboost_detector.py
(+59 files in other folders)
