[project]
name = "packetsentry"
version = "0.1.0"
description = "Network Intrusion Detection System from scratch"
requires-python = ">=3.12"
dependencies = [
    "scapy>=2.5.0",
    "torch>=2.2.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "shap>=0.44.0",
    "optuna>=3.5.0",
    "imbalanced-learn>=0.12.0",
    "duckdb>=0.10.0",
    "typer>=0.12.0",
    "textual>=0.52.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "numpy>=1.26.0",
    "joblib>=1.3.0",
    "chromadb>=0.4.0",
]

[project.scripts]
packetsentry = "packetsentry.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=packetsentry --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
